# cargo-lock-crate-vendor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
src/cargo_lock_crate_vendor/: __main__.py
