[tool.poetry]
name = "cargo-lock-crate-vendor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include="cargo_lock_crate_vendor", from="src"}]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"cargo-lock-crate-vendor" = "cargo_lock_crate_vendor.__main__:main"