[project]
name = "cargo-lock-crate-vendor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.13"
dependencies = [
    "httpx[async,socks]>=0.28.0",
    "toml>=0.10.2",
]

[project.scripts]
cargo-lock-crate-vendor = "cargo_lock_crate_vendor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
